--- a/output/index.html
+++ b/output/index.html
@@ -210,6 +210,21 @@ Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplôm
       </p>
       <a class="secondary-content" href="./animer-par-le-storytelling.html"><i class="tiny material-icons">open_in_new</i></a>
     </li>
+        <li class="collection-item avatar">
+      <i class="material-icons circle grey">airline_seat_recline_normal</i>
+      <span class="title"><a href="./animer-par-la-documentation.html">Animer par la documentation </a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./animer-par-la-documentation.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">airline_seat_recline_normal</i>
+      <span class="title"><a href="./animer-des-moments-de-partage-de-connaissance.html">Animer par le partage de connaissance </a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./animer-des-moments-de-partage-de-connaissance.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+</ul>
     </div><!-- /.entry-content -->
 
   </article>
