FEATURE/ add content for experience and animation

--- a/output/archives.html
+++ b/output/archives.html
@@ -76,6 +76,8 @@
     <dt>sam. 05 novembre 2022</dt>
     <dd><a href="./animer-par-le-storytelling.html">Animer par le storytelling</a></dd>
     <dt>sam. 05 novembre 2022</dt>
+    <dd><a href="./animer-un-partage-de-veille.html">Animer un partage de veille</a></dd>
+    <dt>sam. 05 novembre 2022</dt>
     <dd><a href="./gerer-les-voyages-organises-dune-entreprise.html">Gérer les voyages organisés d'une entreprise</a></dd>
     <dt>sam. 05 novembre 2022</dt>
     <dd><a href="./pouvoir-generer-automatiquement-le-plan-de-lamenagement-dun-vehicule-renault-tech.html">Pouvoir générer automatiquement le plan de l'aménagement d'un véhicule Renault Tech</a></dd>
