--- a/output/index.html
+++ b/output/index.html
@@ -224,6 +224,13 @@ Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplôm
       </p>
       <a class="secondary-content" href="./animer-des-moments-de-partage-de-connaissance.html"><i class="tiny material-icons">open_in_new</i></a>
     </li>
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">airline_seat_recline_normal</i>
+      <span class="title"><a href="./animer-un-partage-de-veille.html">Animer un partage de veille </a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./animer-un-partage-de-veille.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
 </ul>
     </div><!-- /.entry-content -->
 
