--- a/output/tags.html
+++ b/output/tags.html
@@ -71,7 +71,7 @@
     <ul>
         <li><a href="./tag/access.html">Access</a> (1)</li>
         <li><a href="./tag/algorithme.html">algorithme</a> (1)</li>
-        <li><a href="./tag/animation.html">animation</a> (3)</li>
+        <li><a href="./tag/animation.html">animation</a> (4)</li>
         <li><a href="./tag/api.html">api</a> (2)</li>
         <li><a href="./tag/asynchrone.html">asynchrone</a> (1)</li>
         <li><a href="./tag/beautiful-soup.html">Beautiful Soup</a> (1)</li>
@@ -94,7 +94,7 @@
         <li><a href="./tag/openerp.html">OpenERP</a> (1)</li>
         <li><a href="./tag/oracle-7.html">Oracle 7</a> (2)</li>
         <li><a href="./tag/php.html">php</a> (1)</li>
-        <li><a href="./tag/productivite.html">productivité</a> (3)</li>
+        <li><a href="./tag/productivite.html">productivité</a> (4)</li>
         <li><a href="./tag/python.html">python</a> (7)</li>
         <li><a href="./tag/request.html">request</a> (1)</li>
         <li><a href="./tag/scrapping.html">scrapping</a> (1)</li>
@@ -105,6 +105,7 @@
         <li><a href="./tag/vanilla-javascript.html">vanilla javascript</a> (1)</li>
         <li><a href="./tag/vb6.html">VB6</a> (1)</li>
         <li><a href="./tag/vba.html">vba</a> (2)</li>
+        <li><a href="./tag/veille.html">veille</a> (1)</li>
     </ul>
 </section>
 
