FEATURE/ add content for experience and animation

--- a/output/tags.html
+++ b/output/tags.html
@@ -71,11 +71,13 @@
     <ul>
         <li><a href="./tag/access.html">Access</a> (1)</li>
         <li><a href="./tag/algorithme.html">algorithme</a> (1)</li>
-        <li><a href="./tag/animation.html">animation</a> (4)</li>
+        <li><a href="./tag/animation.html">animation</a> (5)</li>
         <li><a href="./tag/api.html">api</a> (2)</li>
         <li><a href="./tag/asynchrone.html">asynchrone</a> (1)</li>
         <li><a href="./tag/beautiful-soup.html">Beautiful Soup</a> (1)</li>
+        <li><a href="./tag/blog.html">blog</a> (1)</li>
         <li><a href="./tag/cas-dusage.html">cas d'usage</a> (1)</li>
+        <li><a href="./tag/communication.html">communication</a> (1)</li>
         <li><a href="./tag/complexite.html">complexité</a> (1)</li>
         <li><a href="./tag/console.html">console</a> (1)</li>
         <li><a href="./tag/delphi.html">Delphi</a> (2)</li>
