--- a/output/index.html
+++ b/output/index.html
@@ -231,6 +231,15 @@ Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplôm
       </p>
       <a class="secondary-content" href="./animer-un-partage-de-veille.html"><i class="tiny material-icons">open_in_new</i></a>
     </li>
+    <li class="collection-item avatar">
+      <i class="material-icons circle grey">airline_seat_recline_normal</i>
+      <span class="title"><a href="./animer-le-developpement-dune-application.html">Animer le développement d'une application </a></span>
+      <p>
+      </p>
+      <a class="secondary-content" href="./animer-le-developpement-dune-application.html"><i class="tiny material-icons">open_in_new</i></a>
+    </li>
+
+
 </ul>
     </div><!-- /.entry-content -->
 
