--- a/output/index.html
+++ b/output/index.html
@@ -201,7 +201,7 @@ Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplôm
      </li>
 
 </ul>
-<p><span id="list_projets_animation">Ci-dessous une liste des projets d'animation réalisés au cours de ma vie professionnelle et parfois personnelles:</span></p>
+<p><span id="list_projets_animation">Ci-dessous une liste des projets d'animation réalisés au cours de ma vie professionnelle:</span></p>
 <ul class="collection">
     <li class="collection-item avatar">
       <i class="material-icons circle grey">airline_seat_recline_normal</i>
@@ -211,28 +211,28 @@ Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplôm
       <a class="secondary-content" href="./animer-par-le-storytelling.html"><i class="tiny material-icons">open_in_new</i></a>
     </li>
         <li class="collection-item avatar">
-      <i class="material-icons circle grey">airline_seat_recline_normal</i>
-      <span class="title"><a href="./animer-par-la-documentation.html">Animer par la documentation </a></span>
+      <i class="material-icons circle grey">book</i>
+      <span class="title"><a href="./animer-par-la-documentation.html">Animer par la documentation</a></span>
       <p>
       </p>
       <a class="secondary-content" href="./animer-par-la-documentation.html"><i class="tiny material-icons">open_in_new</i></a>
     </li>
     <li class="collection-item avatar">
-      <i class="material-icons circle grey">airline_seat_recline_normal</i>
+      <i class="material-icons circle grey">people</i>
       <span class="title"><a href="./animer-des-moments-de-partage-de-connaissance.html">Animer par le partage de connaissance </a></span>
       <p>
       </p>
       <a class="secondary-content" href="./animer-des-moments-de-partage-de-connaissance.html"><i class="tiny material-icons">open_in_new</i></a>
     </li>
     <li class="collection-item avatar">
-      <i class="material-icons circle grey">airline_seat_recline_normal</i>
+      <i class="material-icons circle grey">book</i>
       <span class="title"><a href="./animer-un-partage-de-veille.html">Animer un partage de veille </a></span>
       <p>
       </p>
       <a class="secondary-content" href="./animer-un-partage-de-veille.html"><i class="tiny material-icons">open_in_new</i></a>
     </li>
     <li class="collection-item avatar">
-      <i class="material-icons circle grey">airline_seat_recline_normal</i>
+      <i class="material-icons circle grey">explore</i>
       <span class="title"><a href="./animer-le-developpement-dune-application.html">Animer le développement d'une application </a></span>
       <p>
       </p>
