--- a/output/index.html
+++ b/output/index.html
@@ -105,9 +105,12 @@
         </a>
     </div>
   </div>
-<p>list_projets_animation
-<span id="list_projets_formation">
-Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom <strong>développeur python</strong>: 
+<p><span id="list_projets_formation">
+Ci-dessous la liste des projets réalisés dans la cadre de ma formation diplômante Openclassroom <strong>développeur python</strong>. </p>
+<p>J'attire votre attention sur le fait que ces projets suivent un parcours pédagogique.<br>
+Chacun d'entre eux traite un aspect technique précis. </p>
+<p>Les pratiques de développement, telles que le respect d'un linter, les instructions de pré-commit, ont été appréhendées au cours du parcours et sont donc absentes dans les premiers projets.</p>
+<p>Les tests font, eux aussi, l'objet de projets dédiés et ne sont pas forcément présents dans les projets dont l'intérêt pédagogique est autre. 
 </span></p>
 <ul class="collection">
     <li  class="collection-item avatar">
